--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <script src="script.js"></script>
 </head>
 <body>
-
-  <!-- Navbar -->
   <div class="Po">
     <img src="openart-image_kz9NAdvh_1752636502377_raw-removebg-preview.png" width="150px">
     <a href="index.html"><button class="button active">Home</button></a>
@@ -27,7 +25,6 @@
 <br>
 <img src="banner.png" alt="Centered Image" class="center-image">
 <br>
-  <!-- Hero Banner -->
   <div class="hero-banner">
     <h1>Welcome to Gamored</h1>
     <p>Your one-stop shop for high-performance tech accessories</p>
@@ -35,7 +32,7 @@
   </div>
   <!-- Featured Products -->
   <div class="featured-section">
-    <h2>🔥 Featured Accessories</h2>
+    <h2> Featured Accessories</h2>
     <div class="product-card">
       <img src="Laptopstand.png" alt="Laptop Stand">
       <h3>Laptop Stand</h3>
