--- a/index.html
+++ b/index.html
@@ -31,13 +31,17 @@
     <a href="Laptopaccessories.html"><button class="cta-button">Explore Products</button></a>
   </div>
   <!-- Featured Products -->
-  <div class="featured-section">
-    <h2> Featured Accessories</h2>
+<div class="featured-section">
+  <h2>Featured Accessories</h2>
+
+  <div class="products-container">
     <div class="product-card">
       <img src="Laptopstand.png" alt="Laptop Stand">
       <h3>Laptop Stand</h3>
       <p class="price">₹799</p>
-      <p class="description">Ergonomic aluminum stand compatible with all laptop sizes.</p>
+      <p class="description">
+        Ergonomic aluminum stand compatible with all laptop sizes.
+      </p>
       <div class="button-group">
         <button onclick="addToCart('Laptop Stand', 799)">Add to Cart</button>
         <a href="laptopstand.html"><button>View</button></a>
@@ -48,13 +52,16 @@
       <img src="front_riot.png" alt="Logitech G502 Hero Mouse">
       <h3>Logitech G502 HERO</h3>
       <p class="price">₹4,499</p>
-      <p class="description">High-performance wired gaming mouse with 25K DPI sensor, 11 customizable buttons, and adjustable weights.</p>
+      <p class="description">
+        High-performance wired gaming mouse with 25K DPI sensor, 11 customizable buttons, and adjustable weights.
+      </p>
       <div class="button-group">
         <button onclick="addToCart('Logitech G502 HERO', 4499)">Add to Cart</button>
         <a href="g502.html"><button>View</button></a>
       </div>
     </div>
   </div>
+</div>
 
 </body>
 </html>
