--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <a href="Aboutus.html"><button>About us</button></a>
     <a href="cart.html"><button>🛒 Cart</button></a>
   </div>
-<br>
-<img src="banner.png" alt="Centered Image" class="center-image">
-<br>
-  <div class="hero-banner">
-    <h1>Welcome to Gamored</h1>
-    <p>Your one-stop shop for high-performance tech accessories</p>
-    <a href="Laptopaccessories.html"><button class="cta-button">Explore Products</button></a>
+<div class="hero-split-images">
+  <div class="hero-image-box">
+    <img src="banner.png" alt="Green gaming setup">
   </div>
-  <!-- Featured Products -->
+
+  <div class="hero-image-box">
+    <img src="dgegsgdfgf.webp" alt="Blue gaming setup">
+  </div>
+</div>
 <div class="featured-section">
   <h2>Featured Accessories</h2>
 
