--- a/g502.html
+++ b/g502.html
@@ -17,6 +17,7 @@
       <button class="dropbtn">Products</button>
       <div class="dropdown-content">
         <a href="Laptopaccessories.html">Laptop Accessories</a>
+            <a href="Connectors.html">Connectors</a>
       </div>
     </div>
 
