--- a/Laptopaccessories.html
+++ b/Laptopaccessories.html
@@ -70,7 +70,7 @@
     <!-- Product 4 -->
     <div class="product-card">
       <img src="gaming mouse pad big.jpg" alt="AD-MP-236 AD-06 Gaming Mouse Pad"/>
-      <h3>AD-MP-236 AD-06 Gaming Mouse Pad</h3>
+      <h3>Gaming Mouse Pad</h3>
       <p class="price">₹500</p>
       <p class="description">Large silk-glide pad (600×300×2 mm) for smooth precision control.</p>
       <div class="button-group">
