--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <a href="Aboutus.html"><button>About us</button></a>
     <a href="cart.html"><button>🛒 Cart</button></a>
   </div>
+  <!-- Gamored Banner -->
+<div class="gamored-banner">
+  <h1>Gamored</h1>
+</div>
+
 <div class="hero-split-images">
   <div class="hero-image-box">
     <img src="banner.png" alt="Green gaming setup">
