--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
   <!-- Gamored Banner -->
 <div class="gamored-banner">
-  <h1>Gamored</h1>
+  <h1>gamored</h1>
 </div>
 
 <div class="hero-split-images">
