--- a/Connectors.html
+++ b/Connectors.html
@@ -52,7 +52,7 @@
 
     <div class="product-card">
       <img src="microtousbc.png" alt="Micro USB Adapter to Type-C (PBCH008)">
-      <h3>Micro USB Adapter to Type-C (PBCH008)</h3>
+      <h3>Micro USB Adapter to Type-C</h3>
       <p class="price">₹99</p>
       <p class="description">Compact adapter for charging and data sync — converts Micro USB to Type-C.</p>
       <div class="button-group">
@@ -63,7 +63,7 @@
 
     <div class="product-card">
       <img src="Type-C To HDMI Female MT-ViKi Video Converter.png" alt="Type-C to HDMI Video Converter (PBADN097)">
-      <h3>Type-C to HDMI Video Converter (PBADN097)</h3>
+      <h3>Type-C to HDMI Video Converter</h3>
       <p class="price">₹250</p>
       <p class="description">High-speed adapter that connects Type-C devices to HDMI displays with sharp video output.</p>
       <div class="button-group">
