--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
   <h2>Featured Accessories</h2>
 
   <div class="products-container">
+        <div class="product-card">
+      <img src="Type-C To HDMI Female MT-ViKi Video Converter.png" alt="Type-C to HDMI Video Converter (PBADN097)">
+      <h3>Type-C to HDMI Video Converter</h3>
+      <p class="price">₹250</p>
+      <p class="description">High-speed adapter that connects Type-C devices to HDMI displays with sharp video output.</p>
+      <div class="button-group">
+        <button onclick="addToCart('Type-C to HDMI Video Converter (PBADN097)', 250)">Add to Cart</button>
+        <a href="typec-hdmi.html"><button>View</button></a>
+      </div>
+    </div>
+    
     <div class="product-card">
       <img src="Laptopstand.png" alt="Laptop Stand">
       <h3>Laptop Stand</h3>
@@ -63,6 +74,16 @@
       <div class="button-group">
         <button onclick="addToCart('Logitech G502 HERO', 4499)">Add to Cart</button>
         <a href="g502.html"><button>View</button></a>
+      </div>
+    </div>
+    <div class="product-card">
+      <img src="gaming mouse pad big.jpg" alt="AD-MP-236 AD-06 Gaming Mouse Pad"/>
+      <h3>Gaming Mouse Pad</h3>
+      <p class="price">₹500</p>
+      <p class="description">Large silk-glide pad (600×300×2 mm) for smooth precision control.</p>
+      <div class="button-group">
+        <button onclick="addToCart('AD-MP-236 AD-06 Gaming Mouse Pad', 500)">Add to Cart</button>
+        <a href="ad-mp-236.html"><button>View</button></a>
       </div>
     </div>
   </div>
