--- a/index.html
+++ b/index.html
@@ -89,5 +89,12 @@
   </div>
 </div>
 
+    <footer class="featured-section">
+    <h2>High-Performance Connectors by Gamored</h2>
+    <p>Shop now at <strong>arjunshsrma.github.io/Gamored</strong></p>
+  </footer>
+</body>
+</html>
+
 </body>
 </html>
