--- a/laptopstand.html
+++ b/laptopstand.html
@@ -34,8 +34,8 @@
       <img id="mainProductImage" src="laptopstand1.png" class="main-image" alt="Adjustable Aluminum Laptop Stand">
 
       <div class="thumbnail-row">
-        <img src="laptopstand1.png" onclick="changeImage(this)">
-        <img src="laptopstand2.png" onclick="changeImage(this)">
+        <img src="Laptopstand.png" onclick="changeImage(this)">
+        <img src="Laptopstand2.png" onclick="changeImage(this)">
         <img src="laptopstand3.png" onclick="changeImage(this)">
       </div>
     </div>
