--- a/laptopstand.html
+++ b/laptopstand.html
@@ -31,12 +31,11 @@
 
     <!-- IMAGE GALLERY -->
     <div class="product-gallery">
-      <img id="mainProductImage" src="laptopstand1.png" class="main-image" alt="Adjustable Aluminum Laptop Stand">
+      <img id="mainProductImage" src="Laptopstand.png" class="main-image" alt="Laptop Stand">
 
       <div class="thumbnail-row">
         <img src="Laptopstand.png" onclick="changeImage(this)">
         <img src="Laptopstand2.png" onclick="changeImage(this)">
-        <img src="laptopstand3.png" onclick="changeImage(this)">
       </div>
     </div>
 
