--- a/laptopstand.html
+++ b/laptopstand.html
@@ -31,11 +31,11 @@
 
     <!-- IMAGE GALLERY -->
     <div class="product-gallery">
-      <img id="mainProductImage" src="Laptopstand.png" class="main-image" alt="Laptop Stand">
-
+<img id="mainProductImage" src="Laptopstand.png" class="main-image">
+      
       <div class="thumbnail-row">
-        <img src="Laptopstand.png" onclick="changeImage(this)">
-        <img src="Laptopstand2.png" onclick="changeImage(this)">
+<img src="Laptopstand.png" onclick="changeImage(this)">
+<img src="Laptopstand2.png" onclick="changeImage(this)">
       </div>
     </div>
 
