--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="stylesheet.css">
   <script src="script.js" defer></script>
+  <style>
+      .pay-btn {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  padding: 16px 36px;
+  min-height: 64px;
+
+  background: linear-gradient(135deg, #00c6ff, #0072ff);
+  color: #00121f;
+
+  border: none;
+  border-radius: 14px;
+
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.3;
+  text-align: center;
+  white-space: normal;
+
+  cursor: pointer;
+}
+
+
+  .upi-button {
+    width: 100%;
+  }
+}
+  </style>
 
 </head>
 <body>
