--- a/upi-checkout.html
+++ b/upi-checkout.html
@@ -1,237 +1,271 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gamored — UPI Checkout</title>
 
+<link rel="stylesheet" href="stylesheet.css">
+
 <style>
-/* ===== GAMORED THEME ===== */
-:root{
-  --bg:#05070c;
-  --panel:#0b1c2d;
-  --panel-soft:#081a2e;
-  --accent:#00c6ff;
-  --accent-2:#0072ff;
-  --text:#e8f2ff;
-  --muted:#9fdcff;
-  --danger:#ff4d4d;
+/* ===== PAGE SPACING ===== */
+.checkout-wrapper {
+  max-width: 900px;
+  margin: 120px auto 60px;
+  padding: 40px;
+  background: linear-gradient(135deg, #060b1a, #0b1c2d);
+  border-radius: 20px;
+  box-shadow: 0 0 40px rgba(0,170,255,0.25);
+  color: #e8f2ff;
 }
 
-*{box-sizing:border-box}
-
-body{
-  margin:0;
-  font-family: system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
-  background: linear-gradient(#05070c,#081a2e);
-  color:var(--text);
+/* ===== HEADINGS ===== */
+.checkout-wrapper h1,
+.checkout-wrapper h2,
+.checkout-wrapper h3 {
+  color: #9fdcff;
 }
 
-/* ===== NAVBAR ===== */
-.nav{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:16px 6%;
-  background:#0b1c2d;
+/* ===== ORDER SUMMARY ===== */
+.order-summary {
+  padding: 20px 24px;
+  margin-bottom: 30px;
+  background: rgba(10,30,60,0.7);
+  border-radius: 14px;
+  border: 1px solid rgba(0,170,255,0.35);
 }
-
-.nav a{
-  color:var(--text);
-  text-decoration:none;
-  margin:0 12px;
-  font-weight:600;
-}
-
-/* ===== CHECKOUT CARD ===== */
-.checkout-card{
-  max-width:800px;
-  margin:40px auto;
-  padding:30px;
-  border-radius:20px;
-  background:linear-gradient(135deg,var(--panel),var(--panel-soft));
-  box-shadow:0 0 40px rgba(0,170,255,.25);
-}
-
-.checkout-card h2{
-  color:var(--muted);
-  margin-bottom:20px;
-}
-
-/* ===== SECTIONS ===== */
-.card{
-  padding:18px 22px;
-  border-radius:14px;
-  background:rgba(10,30,60,.7);
-  border:1px solid rgba(0,170,255,.35);
-  margin-bottom:22px;
-}
-
-h3{color:var(--muted);margin-top:0}
 
 /* ===== QR ===== */
-.qr{
-  display:flex;
-  justify-content:center;
-  margin:20px 0;
+.qr-box {
+  text-align: center;
+  margin: 30px 0;
 }
 
-.qr img{
-  width:180px;
-  height:180px;
-  border-radius:14px;
-  background:#fff;
-  padding:10px;
+.qr-box img {
+  width: 180px;
+  height: 180px;
+  background: #fff;
+  padding: 10px;
+  border-radius: 14px;
 }
 
 /* ===== FORM ===== */
-label{
-  display:block;
-  margin-top:14px;
-  font-weight:600;
+label {
+  display: block;
+  margin-top: 14px;
+  font-weight: 600;
 }
 
-input,select{
-  width:100%;
-  padding:12px;
-  margin-top:6px;
-  border-radius:10px;
-  border:1px solid rgba(0,170,255,.4);
-  background:#0b1c2d;
-  color:var(--text);
+input,
+select {
+  width: 100%;
+  padding: 12px;
+  margin-top: 6px;
+  border-radius: 10px;
+  border: 1px solid rgba(0,170,255,0.4);
+  background: #0b1c2d;
+  color: #e8f2ff;
 }
 
-input::placeholder{color:#7fbfff}
-
-.grid-2{
-  display:grid;
-  grid-template-columns:repeat(2,1fr);
-  gap:14px;
+input::placeholder {
+  color: #7fbfff;
 }
 
-@media(max-width:640px){
-  .grid-2{grid-template-columns:1fr}
+.grid-2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 14px;
+}
+
+@media (max-width: 640px) {
+  .grid-2 {
+    grid-template-columns: 1fr;
+  }
 }
 
 /* ===== BUTTON ===== */
-.btn-primary{
-  margin-top:26px;
-  padding:16px 36px;
-  background:linear-gradient(135deg,var(--accent),var(--accent-2));
-  color:#00121f;
-  border:none;
-  border-radius:14px;
-  font-size:16px;
-  font-weight:700;
-  cursor:pointer;
+.send-btn {
+  margin-top: 30px;
+  padding: 16px 36px;
+  background: linear-gradient(135deg, #00c6ff, #0072ff);
+  color: #00121f;
+  border: none;
+  border-radius: 14px;
+  font-size: 16px;
+  font-weight: 700;
+  cursor: pointer;
 }
 
-.btn-primary:disabled{opacity:.6}
+.send-btn:disabled {
+  opacity: 0.6;
+}
 
 /* ===== TOAST ===== */
-.toast{
-  margin-top:18px;
-  padding:12px 16px;
-  border-radius:10px;
+.toast {
+  margin-top: 18px;
+  padding: 12px 16px;
+  border-radius: 10px;
 }
 
-.ok{
-  background:rgba(0,255,160,.15);
-  border:1px solid rgba(0,255,160,.4);
+.toast.ok {
+  background: rgba(0,255,160,0.15);
+  border: 1px solid rgba(0,255,160,0.4);
 }
 
-.err{
-  background:rgba(255,80,80,.15);
-  border:1px solid rgba(255,80,80,.4);
+.toast.err {
+  background: rgba(255,80,80,0.15);
+  border: 1px solid rgba(255,80,80,0.4);
 }
 </style>
 </head>
 
 <body>
 
-<nav class="nav">
-  <div><a href="index.html">Gamored</a></div>
-  <div>
-    <a href="index.html">Home</a>
-    <a href="Laptopaccessories.html">Products</a>
-    <a href="cart.html">Cart</a>
+<!-- 🔹 NAVBAR (EXACT SAME AS CART) -->
+<div class="Po">
+  <img src="openart-image_kz9NAdvh_1752636502377_raw-removebg-preview.png" width="150px">
+
+  <a href="index.html"><button>Home</button></a>
+
+  <div class="dropdown">
+    <button class="dropbtn">Products</button>
+    <div class="dropdown-content">
+      <a href="Laptopaccessories.html">Laptop Accessories</a>
+      <a href="Connectors.html">Connectors</a>
+    </div>
   </div>
-</nav>
 
-<section class="checkout-card">
-
-<h2>UPI Checkout</h2>
-
-<div id="order-summary" class="card">
-  <h3>Order Summary</h3>
-  <p><strong>Amount:</strong> ₹<span id="amountValue">0</span></p>
-  <p><strong>Items:</strong> <span id="itemCount">0</span></p>
+  <a href="Contactus.html"><button>Contact Us</button></a>
+  <a href="Aboutus.html"><button>About Us</button></a>
+  <a href="cart.html"><button>Cart</button></a>
 </div>
 
-<div class="qr">
-  <img id="upiQR" alt="UPI QR">
+<!-- 🔹 CHECKOUT -->
+<div class="checkout-wrapper">
+
+  <h1>UPI Checkout</h1>
+
+  <div class="order-summary">
+    <h3>Order Summary</h3>
+    <p><strong>Amount:</strong> ₹<span id="amountValue">0</span></p>
+    <p><strong>Items:</strong> <span id="itemCount">0</span></p>
+  </div>
+
+  <div class="qr-box">
+    <img id="upiQR" alt="UPI QR">
+    <p>
+      Scan the QR above or
+      <a id="upiLink" href="#" style="color:#00c6ff;font-weight:700;">
+        pay via UPI app
+      </a>
+    </p>
+  </div>
+
+  <form id="upiCheckoutForm">
+
+    <h3>Contact Details</h3>
+    <label>Full Name</label>
+    <input id="fullName" required>
+
+    <label>Email</label>
+    <input id="email" type="email" required>
+
+    <label>Phone</label>
+    <input id="phone" pattern="[0-9]{10}" required>
+
+    <h3>Address</h3>
+    <div class="grid-2">
+      <input id="state" placeholder="State" required>
+      <input id="city" placeholder="City" required>
+      <input id="pincode" placeholder="Pincode" required>
+      <input id="houseNo" placeholder="House / Building" required>
+    </div>
+
+    <input id="address1" placeholder="Address Line 1" required>
+    <input id="address2" placeholder="Address Line 2">
+
+    <h3>Payment Proof</h3>
+    <input id="upiRef" placeholder="UPI Ref / UTR" required>
+    <input type="file" id="screenshot" accept="image/*" required>
+
+    <div id="shotPreview"></div>
+
+    <input type="hidden" id="orderAmount">
+    <input type="hidden" id="orderItemsJson">
+    <input type="hidden" id="orderId">
+
+    <button type="submit" id="sendBtn" class="send-btn">Send</button>
+    <div id="formMsg" class="toast" style="display:none;"></div>
+
+  </form>
 </div>
-
-<p style="text-align:center">
-  Scan the QR above or
-  <a id="upiLink" href="#" style="color:var(--accent);font-weight:700;">
-    pay via UPI app
-  </a>
-</p>
-
-<form id="upiCheckoutForm">
-
-<h3>Contact Details</h3>
-<label>Full Name</label>
-<input id="fullName" required>
-
-<label>Email</label>
-<input id="email" type="email" required>
-
-<label>Phone</label>
-<input id="phone" pattern="[0-9]{10}" required>
-
-<h3>Address</h3>
-<div class="grid-2">
-  <input placeholder="State" id="state" required>
-  <input placeholder="City" id="city" required>
-  <input placeholder="Pincode" id="pincode" required>
-  <input placeholder="House / Building" id="houseNo" required>
-</div>
-
-<input placeholder="Address Line 1" id="address1" required>
-<input placeholder="Address Line 2" id="address2">
-
-<h3>Payment Proof</h3>
-<input placeholder="UPI Ref / UTR" id="upiRef" required>
-<input type="file" id="screenshot" accept="image/*" required>
-
-<div id="shotPreview"></div>
-
-<input type="hidden" id="orderAmount">
-<input type="hidden" id="orderItemsJson">
-<input type="hidden" id="orderId">
-
-<button class="btn-primary" id="sendBtn">Send</button>
-<div id="formMsg" class="toast" style="display:none"></div>
-
-</form>
-</section>
 
 <script>
 (function(){
-  const cart=JSON.parse(localStorage.getItem('cart')||'[]');
-  const amount=cart.reduce((s,i)=>s+(i.price||0)*(i.qty||1),0);
-  amountValue.textContent=amount.toFixed(2);
-  itemCount.textContent=cart.length;
-  orderAmount.value=amount.toFixed(2);
-  orderItemsJson.value=JSON.stringify(cart);
-  orderId.value='GAMO-'+Date.now();
+  const cart = JSON.parse(localStorage.getItem("cart") || "[]");
+  const amount = cart.reduce((s,i)=>s+(i.price||0)*(i.qty||1),0);
 
-  const base=`upi://pay?pa=7042630996@fam&pn=Gamored&cu=INR&am=${amount.toFixed(2)}`;
-  upiQR.src=`https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=${encodeURIComponent(base)}`;
-  upiLink.href=base;
+  amountValue.textContent = amount.toFixed(2);
+  itemCount.textContent = cart.length;
+  orderAmount.value = amount.toFixed(2);
+  orderItemsJson.value = JSON.stringify(cart);
+  orderId.value = "GAMO-" + Date.now();
+
+  const base = `upi://pay?pa=7042630996@fam&pn=Gamored&cu=INR&am=${amount.toFixed(2)}`;
+  upiQR.src = `https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=${encodeURIComponent(base)}`;
+  upiLink.href = base;
 })();
+
+const shotInput = document.getElementById("screenshot");
+const shotPreview = document.getElementById("shotPreview");
+
+shotInput.addEventListener("change", ()=>{
+  shotPreview.innerHTML = "";
+  const file = shotInput.files[0];
+  if(!file) return;
+  const img = document.createElement("img");
+  img.style.maxWidth = "220px";
+  img.style.borderRadius = "8px";
+  img.src = URL.createObjectURL(file);
+  shotPreview.appendChild(img);
+});
+
+const GAS_URL = "https://script.google.com/macros/s/AKfycbyILp17k86wL1zw2deDcb2QoBWGkjFZYKSigC5jGm8GDpJh1b1F_gtWIsKSBcZTIhlXgw/exec";
+
+document.getElementById("upiCheckoutForm").addEventListener("submit", async e=>{
+  e.preventDefault();
+  const btn = sendBtn;
+  const msg = formMsg;
+
+  btn.disabled = true;
+  btn.textContent = "Sending...";
+  msg.style.display = "none";
+  msg.className = "toast";
+
+  try{
+    const file = shotInput.files[0];
+    const reader = new FileReader();
+    reader.onload = async ()=>{
+      const fd = new FormData(e.target);
+      fd.append("screenshot_b64", reader.result.split(",")[1]);
+
+      const res = await fetch(GAS_URL,{method:"POST",body:fd});
+      if(!res.ok) throw new Error("Send failed");
+
+      msg.textContent = "Payment submitted successfully!";
+      msg.className = "toast ok";
+      msg.style.display = "block";
+    };
+    reader.readAsDataURL(file);
+  }catch(err){
+    msg.textContent = err.message;
+    msg.className = "toast err";
+    msg.style.display = "block";
+  }finally{
+    btn.disabled = false;
+    btn.textContent = "Send";
+  }
+});
 </script>
 
 </body>
